--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022",
+
+    "module": "commonjs",
+
+    "resolveJsonModule": true,
+
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
